# ensae-prog24

./: README.md  pyproject.toml  rapport.tex
input/: grid5.in
swap_puzzle/: game.py  graph.py  grid.py  main.py  réponses  solver.py
tests/: test_bfs.py  test_get_solution.py  test_graph_from_file.py
tests/test game/: test_Results.py  test_Victory.py  test_add_barriers.py  test_add_grid.py  test_chose_level.py  test_display.py  test_level_grid.py  test_music.py  test_theo.py  test_valid_barriers.py
tests/test part 1/: test_copy.py  test_dificulty.py  test_get_solution.py  test_grid_from_file.py  test_is_sorted.py  test_rand_grid.py  test_random_grid.py  test_swap.py  test_swap_seq.py
tests/test part 2/: test_bfs.py  test_construct_grid_graph.py  test_get_solution_bfs.py  test_get_solution_bfs2.py  test_graph_from_file.py
tests/test part 3/: test_a_star.py  test_get_solution_a_star.py  test_heuristic.py
tests/tests part 2/: test_bfs.py  test_construct_grid_graph.py  test_get_solution_bfs.py  test_graph_from_grid.py  test_solver_2.py
