[project]
name = "ensae-prog24"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame>=2.6.1",
    "pyinstaller>=6.20.0",
]

[dependency-groups]
dev = [
    "pylint>=4.0.5",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]
